--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -35,7 +35,7 @@ env:
   KSU_DIR: KernelSU-Next
   WORK_DIR: kernel_workspace
   PLAT_DIR: kernel_platform
-  BUILD_KERNL: kernel_platform/oplus/build/oplus_build_kernel.sh
+  BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
   UP_AK3: AnyKernel3
   UP_IMG: kernel_workspace/kernel_platform/out/msm-kernel-kalama-gki/dist/Image
   
@@ -115,7 +115,7 @@ jobs:
     - name: 编译内核
       run: |
         cd ${{env.WORK_DIR}}
-        ./${{env.BUILD_KERNL}} ${{github.event.inputs.CPUD}} gki
+        ./${{env.BUILD_KERNEL}} ${{github.event.inputs.CPUD}} gki
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
