--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -117,8 +117,20 @@ jobs:
         cd ${{env.WORK_DIR}}
         ./${{env.BUILD_KERNEL}} ${{github.event.inputs.CPUD}} gki
         
+    - name: 制作 AnyKernel3
+      run: |
+        git clone ${{env.ANYKERNEL3_REPO}} --depth=1
+        rm -rf ./AnyKernel3/.git
+        cp ${{env.UP_IMG}} ./AnyKernel3/
+        
+    - name: 上传 AnyKernel3
+      uses: actions/upload-artifact@v4
+      with:
+        name: AnyKernel3_${env.KSU_DIR}_${KSUVER}_${{github.event.inputs.FEIL}}
+        path: ${{env.UP_AK3}}
+        
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${KSU_DIR}_${env.KSUVER}_${{github.event.inputs.FEIL}}
+        name: Image-${env.KSU_DIR}_${KSUVER}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_IMG}}
