--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -126,11 +126,11 @@ jobs:
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_${env.KSU_DIR}_${KSUVER}_${{github.event.inputs.FEIL}}
+        name: AnyKernel3_${env.KSU_DIR}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_AK3}}
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${env.KSU_DIR}_${KSUVER}_${{github.event.inputs.FEIL}}
+        name: Image-${env.KSU_DIR}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_IMG}}
