--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -121,16 +121,16 @@ jobs:
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp ${{env.UP_IMG}} ./AnyKernel3/
+        cp ${{env.UP_IMG}} ${{env.UP_AK3}}
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3-${env.KSU_DIR}_${{github.event.inputs.FEIL}}
+        name: AnyKernel3-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_AK3}}
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${env.KSU_DIR}_${{github.event.inputs.FEIL}}
+        name: Image-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
         path: ${{env.UP_IMG}}
