--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -111,7 +111,7 @@ jobs:
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git
-        cp ${{env.UP_IMG}} ./AnyKernel3/
+        cp ${{env.UP_IMG}} ${{env.UP_AK3}}
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
