--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -82,7 +82,19 @@ jobs:
         cd kernel
         ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
 
-    - name: Upload Image
+    - name: 制作 AnyKernel3
+      run: |
+        git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
+        rm -rf ./AnyKernel3/.git
+        cp kernel/out/dist/Image AnyKernel3
+        
+    - name: 上传 AnyKernel3
+      uses: actions/upload-artifact@v4
+      with:
+        name: AnyKernel3-KernelSU_Next-SUSFS
+        path: AnyKernel3
+
+    - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-KernelSU_Next-SUSFS
