--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         mkdir kernel && cd kernel
         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8550 -m oneplus_ace3_v.xml --depth=1
-        repo sync
+        repo sync -j$(nproc --all)
         # rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
         # sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
         sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh
