--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -80,6 +80,7 @@ jobs:
     - name: 编译内核
       run: |
         cd kernel
+        export LTO=thin
         ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
 
     - name: 制作 AnyKernel3
