--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -86,15 +86,18 @@ jobs:
       run: |
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         cp kernel/out/dist/Image AnyKernel3
-        
+      continue-on-error: true
+
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3-KernelSU_Next-SUSFS
         path: AnyKernel3
+      continue-on-error: true
 
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
         name: Image-KernelSU_Next-SUSFS
         path: kernel/out/dist/Image
+      continue-on-error: true
