--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -85,14 +85,14 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
-        cp kernel/out/dist/Image AnyKernel3
+        cp kernel/out/dist/Image kernel/AnyKernel3
       continue-on-error: true
 
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
         name: AnyKernel3-KernelSU_Next-SUSFS
-        path: AnyKernel3
+        path: kernel/AnyKernel3
       continue-on-error: true
 
     - name: 上传 Image
