--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -35,7 +35,7 @@ env:
   WORK_DIR: kernel_workspace
   PLAT_DIR: kernel_platform
   BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
-  UP_AK3: AnyKernel3
+  UP_AK3: kernel_workspace/AnyKernel3
   UP_IMG: kernel_workspace/kernel_platform/out/msm-kernel-kalama-gki/Image
   
 jobs:
