--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -110,7 +110,7 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp ${{env.UP_IMG}} ${{env.UP_AK3}}
+        cp ${{env.UP_IMG}} ${{env.UP_AK3}}/
       continue-on-error: true 
         
     - name: 上传 AnyKernel3
