--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -85,7 +85,7 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
-        cp kernel/out/dist/Image kernel/AnyKernel3
+        cp kernel/out/dist/Image kernel/AnyKernel3/
       continue-on-error: true
 
     - name: 上传 AnyKernel3
