--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -10,7 +10,7 @@ on:
       FEIL:
         description: "配置文件"
         required: true 
-        default: 'oneplus_ace3_v'
+        default: 'oneplus_12r_v'
       CPUD:
         description: "处理器代号"
         required: true 
