--- a/.github/workflows/KernelSU.yml
+++ b/.github/workflows/KernelSU.yml
@@ -81,10 +81,6 @@ jobs:
       run: |
         cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}/common
         curl -LSs ${{env.KERNELSU_URL}} | bash -s main
-        cd ${KSU_DIR}
-        KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
-        echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
-        sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
         
     - name: 添加 SUSFS
       run: |
@@ -110,7 +106,7 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
-        cp ${{env.UP_IMG}} ${{env.UP_AK3}}/
+        cp ./${{env.UP_IMG}} ./${{env.UP_AK3}}/
       continue-on-error: true 
         
     - name: 上传 AnyKernel3
