--- a/.github/workflows/ksu.yml
+++ b/.github/workflows/ksu.yml
@@ -72,6 +72,7 @@ jobs:
     - name: 制作 AnyKernel3
       run: |
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
+        rm -rf./AnyKernel3/.git ./AnyKernel3/LICENSE
         cp ./kernel/out/dist/Image ./kernel/AnyKernel3/
       continue-on-error: true 
 
