--- a/.github/workflows/ace3.yml
+++ b/.github/workflows/ace3.yml
@@ -37,7 +37,7 @@ jobs:
     - name: 设置 KernelSU
       run: |
         cd kernel/kernel_platform/common
-        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
         
     - name: 添加 SUSFS
       run: |
@@ -55,14 +55,6 @@ jobs:
            patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
            cd ..
            patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-           cp ../../kernel_patches/69_hide_stuff.patch ./
-           patch -p1 -F 3 < 69_hide_stuff.patch
-           cp ../../kernel_patches/apk_sign.c_fix.patch ./
-           patch -p1 -F 3 < apk_sign.c_fix.patch
-           cp ../../kernel_patches/core_hook.c_fix.patch ./
-           patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
-           cp ../../kernel_patches/selinux.c_fix.patch ./
-           patch -p1 -F 3 < selinux.c_fix.patch
            
     - name: 编译内核
       run: |
@@ -73,7 +65,7 @@ jobs:
       run: |
         git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf ./AnyKernel3/.git ./AnyKernel3/LICENSE
-        cp out/dist/Image AnyKernel3/
+        cp ./out/dist/Image ./AnyKernel3/
       continue-on-error: true 
 
     - name: 上传 AnyKernel3
