--- a/.github/workflows/ace3.yml
+++ b/.github/workflows/ace3.yml
@@ -20,50 +20,56 @@ jobs:
         
     - name: 初始化编译环境
       run: |
-        git config --global user.name "yuanqiongyoukong"
-        git config --global user.email "413722718@qq.com"
+        git config --global user.name  "yuanqiongyoukong"
+        git config --global user.email  "413722718@qq.com" 
         sudo apt update && sudo apt upgrade -y
         sudo apt install ccache curl git repo python3 python-is-python3 -y
 
-    - name: 拉取内核清单
+    - name: 拉取内核清单及相关操作
       run: |
-        mkdir kernel && cd kernel
-        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b oneplus/sm8550 -m oneplus_12r_v.xml --depth=1
+        KERNEL_DIR=kernel
+        mkdir -p $KERNEL_DIR && cd $KERNEL_DIR
+        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git  -b oneplus/sm8550 -m oneplus_12r_v.xml  --depth=1
         repo sync -j$(nproc --all)
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null
         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh
+        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh 
 
     - name: 设置 KernelSU
       run: |
         cd kernel/kernel_platform/common
-        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s main
+        curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh"  | bash -s main
         
     - name: 添加 SUSFS
       run: |
-           cd kernel
-           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android13-5.15
-           git clone https://github.com/TheWildJames/kernel_patches.git
-           cd kernel_platform
-           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/KernelSU-Next/
-           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android13-5.15.patch ./common/
-           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
+        KERNEL_DIR=kernel
+        cd $KERNEL_DIR
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git  -b gki-android13-5.15
+        git clone https://github.com/TheWildJames/kernel_patches.git 
+        SUSFS_DIR=susfs4ksu
+        PATCH_DIR=kernel_patches
+        cd kernel_platform
+        cp../$SUSFS_DIR/$PATCH_DIR/KernelSU/10_enable_susfs_for_ksu.patch ./common/KernelSU-Next/ 
+        cp../$SUSFS_DIR/$PATCH_DIR/50_add_susfs_in_gki-android13-5.15.patch ./common/ 
+        cp -r../$SUSFS_DIR/$PATCH_DIR/fs/* ./common/fs/
+        cp -r../$SUSFS_DIR/$PATCH_DIR/include/linux/* ./common/include/linux/
 
-           # Apply patches
-           cd ./common/KernelSU-Next
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-           cd ..
-           patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
-           
+        # Apply patches
+        cd./common/KernelSU-Next
+        patch -p1 --forward < 10_enable_susfs_for_ksu.patch  || { echo "Patch 10_enable_susfs_for_ksu.patch  failed"; exit 1; }
+        cd..
+        patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch  || { echo "Patch 50_add_susfs_in_gki-android13-5.15.patch  failed"; exit 1; }
+
     - name: 编译内核
       run: |
         cd kernel
-        ./kernel_platform/oplus/build/oplus_build_kernel.sh kalama gki
+        ./kernel_platform/oplus/build/oplus_build_kernel.sh  kalama gki
 
     - name: 制作 AnyKernel3
       run: |
-        git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
+        KERNEL_DIR=kernel
+        cd $KERNEL_DIR
+        git clone https://github.com/Kernel-SU/AnyKernel3  --depth=1
         rm -rf ./AnyKernel3/.git ./AnyKernel3/LICENSE
         cp ./out/dist/Image ./AnyKernel3/
       continue-on-error: true 
