--- a/.github/workflows/ace3.yml
+++ b/.github/workflows/ace3.yml
@@ -33,7 +33,10 @@ jobs:
         repo sync -j$(nproc --all)
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null
         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh 
+        sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
+        sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
 
     - name: 设置 KernelSU
       run: |
