--- a/.github/workflows/Build-KernelSU-Next.yml
+++ b/.github/workflows/Build-KernelSU-Next.yml
@@ -5,15 +5,15 @@ on:
       CPU:
         description: "分支"
         required: true
-        default: 'sm8550'
+        default: 'sm7675'
       FEIL:
         description: "配置文件"
         required: true
-        default: 'oneplus_ace3_v'
+        default: 'oneplus_ace_3v_v'
       CPUD:
         description: "处理器代号"
         required: true
-        default: 'kalama'
+        default: 'pineapple'
 
 jobs:
   build:
@@ -28,8 +28,8 @@ jobs:
 
      - name: Configure Git
        run: |
-        git config --global user.name "yuanqiongyoukong"
-        git config --global user.email "413722718@qq.com"
+        git config --global user.name "wuua"
+        git config --global user.email "3436678798@qq.com"
 
      - name: Clean up disk space
        run: |
@@ -90,3 +90,4 @@ jobs:
        with:
         name: boot_KernelSU_Next_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
         path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/boot.img
+
