--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -35,9 +35,6 @@ env:
   KSU_DIR: KernelSU-Next
   WORK_DIR: kernel_workspace
   PLAT_DIR: kernel_platform
-  BUILD_KERNEL: kernel_platform/oplus/build/oplus_build_kernel.sh
-  UP_AK3: kernel_workspace/AnyKernel3
-  UP_IMG: kernel_workspace/out/dist/Image
   
 jobs:
   build:
@@ -67,10 +64,10 @@ jobs:
       run: |
         mkdir ${{env.WORK_DIR}} && cd ${{env.WORK_DIR}}
         repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
-        repo sync -j$(nproc --all)
+        repo --trace sync -c -j$(nproc --all) --no-tags
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
         sed -i 's/ -dirty//g' ${{env.PLAT_DIR}}/common/scripts/setlocalversion ${{env.PLAT_DIR}}/msm-kernel/scripts/setlocalversion
-        sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        # sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
         # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
         # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
         # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
@@ -90,14 +87,14 @@ jobs:
         git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
         git clone ${{env.PATCHES_REPO}}
         cd ${{env.PLAT_DIR}}
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./common/${KSU_DIR}/
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./${KSU_DIR}/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         # 应用补丁
-        cd ./common/${KSU_DIR}
+        cd ./${KSU_DIR}
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-        cd ..
+        cd ../common
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
         cp ../../kernel_patches/69_hide_stuff.patch ./
         patch -p1 -F 3 < 69_hide_stuff.patch
@@ -111,26 +108,25 @@ jobs:
     - name: 编译内核
       run: |
         cd ${{env.WORK_DIR}}
-        mkdir AnyKernel3
-        ./${{env.BUILD_KERNEL}} ${{github.event.inputs.CPUD}} gki
+        LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
         
     - name: 制作 AnyKernel3
       run: |
         git clone ${{env.ANYKERNEL3_REPO}} --depth=1
         rm -rf ./AnyKernel3/.git ./AnyKernel3/LICENSE
-        cp out/dist/Image AnyKernel3/
+        cp kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image ./AnyKernel3/
       continue-on-error: true 
         
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
-        path: ${{env.UP_AK3}}
+        name: AnyKernel3_${{env.KSU_DIR}}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+        path: ./AnyKernel3/*
       continue-on-error: true 
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image-${{env.KSU_DIR}}_${{github.event.inputs.FEIL}}
-        path: ${{env.UP_IMG}}
+        name: Image_${{env.KSU_DIR}}_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+        path: kernel_workspace/kernel_platform/out/msm-kernel-${{ github.event.inputs.CPUD }}-gki/dist/Image
       continue-on-error: true 
