--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -74,7 +74,7 @@ jobs:
         
     - name: 设置 KernelSU
       run: |
-        cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}/common
+        cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}
         curl -LSs ${{env.KERNELSU_URL}} | bash -s next
         cd ${KSU_DIR}
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
