--- a/.github/workflows/KernelSU-Next.yml
+++ b/.github/workflows/KernelSU-Next.yml
@@ -24,18 +24,6 @@ on:
         required: true 
         default: '5.15'
         
-env:
-  GIT_USER_NAME: yuanqiongyoukong
-  GIT_USER_EMAIL: 413722718@qq.com
-  KERNEL_MANIFEST_URL: https://github.com/OnePlusOSS/kernel_manifest.git
-  KERNELSU_URL: https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh
-  SUSFS_REPO: https://gitlab.com/simonpunk/susfs4ksu.git
-  PATCHES_REPO: https://github.com/TheWildJames/kernel_patches.git
-  ANYKERNEL3_REPO: https://github.com/Kernel-SU/AnyKernel3
-  KSU_DIR: KernelSU-Next
-  WORK_DIR: kernel_workspace
-  PLAT_DIR: kernel_platform
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -53,8 +41,8 @@ jobs:
         
     - name: 初始化编译环境
       run: |
-        git config --global user.name "${GIT_USER_NAME}"
-        git config --global user.email "${GIT_USER_EMAIL}"
+        git config --global user.name "yuanqiongyoukong"
+        git config --global user.email "413722718@qq.com"
         sudo apt update && sudo apt upgrade -y && sudo apt install -y python3 git curl
         curl -o ~/repo https://storage.googleapis.com/git-repo-downloads/repo
         chmod a+x ~/repo
@@ -62,37 +50,37 @@ jobs:
         
     - name: 拉取内核清单
       run: |
-        mkdir ${{env.WORK_DIR}} && cd ${{env.WORK_DIR}}
-        repo init -u ${{env.KERNEL_MANIFEST_URL}} -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
+        mkdir kernel_workspace && cd kernel_workspace
+        repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${{github.event.inputs.CPU}} -m ${{github.event.inputs.FEIL}}.xml --depth=1
         repo --trace sync -c -j$(nproc --all) --no-tags
         rm -f common/android/abi_gki_protected_exports_* msm-kernel/android/abi_gki_protected_exports_* 2>/dev/null || echo "No protected exports found!"
-        sed -i 's/ -dirty//g' ${{env.PLAT_DIR}}/common/scripts/setlocalversion ${{env.PLAT_DIR}}/msm-kernel/scripts/setlocalversion
-        # sed -i '203a\export LTO=thin' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
-        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh                 # 禁用图像打包
-        # sed -i 's/local default_value=none/local default_value=thin/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh              # 设置默认值为thin
-        # sed -i 's/local default_value=enable/local default_value=disable/Ig' ${{env.PLAT_DIR}}/oplus/build/oplus_setup.sh         # 设置默认值为禁用
+        sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion kernel_platform/msm-kernel/scripts/setlocalversion
+        # sed -i '203a\export LTO=thin' kernel_platform/oplus/build/oplus_setup.sh                                                # 启用ThinLTO优化
+        # sed -i 's/export REPACK_IMG=true/export REPACK_IMG=false/Ig' kernel_platform/oplus/build/oplus_setup.sh                 # 禁用图像打包
+        # sed -i 's/local default_value=none/local default_value=thin/Ig' kernel_platform/oplus/build/oplus_setup.sh              # 设置默认值为thin
+        # sed -i 's/local default_value=enable/local default_value=disable/Ig' kernel_platform/oplus/build/oplus_setup.sh         # 设置默认值为禁用
         
     - name: 设置 KernelSU
       run: |
-        cd ${{env.WORK_DIR}}/${{env.PLAT_DIR}}
-        curl -LSs ${{env.KERNELSU_URL}} | bash -s next
-        cd ${{env.KSU_DIR}}
+        cd kernel_workspace/kernel_platform
+        curl -LSs https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh | bash -s next
+        cd KernelSU-Next
         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
         echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
         sed -i "s/DKSU_VERSION=16/DKSU_VERSION=${{env.KSU_VERSION}/" kernel/Makefile
         
     - name: 添加 SUSFS
       run: |
-        cd ${{env.WORK_DIR}}
-        git clone ${{env.SUSFS_REPO}} -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
-        git clone ${{env.PATCHES_REPO}}
-        cd ${{env.PLAT_DIR}}
-        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./${{env.KSU_DIR}}/
+        cd kernel_workspace
+        git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}
+        git clone https://github.com/TheWildJames/kernel_patches.git
+        cd kernel_platform
+        cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU-Next/
         cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{github.event.inputs.ANDROID_VERSION}}-${{github.event.inputs.KERNEL_VERSION}}.patch ./common/
         cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
         cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
         # 应用补丁
-        cd ./${{env.KSU_DIR}}
+        cd ./KernelSU-Next
         patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
         cd ../common
         patch -p1 < 50_add_susfs_in_gki-android13-5.15.patch || true
@@ -107,12 +95,12 @@ jobs:
         
     - name: 编译内核
       run: |
-        cd ${{env.WORK_DIR}}
+        cd kernel_workspace
         LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{github.event.inputs.CPUD}} gki
         
     - name: 制作 AnyKernel3
       run: |
-        git clone ${{env.ANYKERNEL3_REPO}} --depth=1
+        git clone https://github.com/Kernel-SU/AnyKernel3 --depth=1
         rm -rf ./AnyKernel3/.git ./AnyKernel3/LICENSE
         cp kernel_workspace/kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image ./AnyKernel3/
       continue-on-error: true 
@@ -120,13 +108,13 @@ jobs:
     - name: 上传 AnyKernel3
       uses: actions/upload-artifact@v4
       with:
-        name: AnyKernel3_${{env.KSU_DIR}}}_${{env.KSUVER}}_${{github.event.inputs.FEIL}}
+        name: AnyKernel3_KernelSU-Next_${{env.KSUVER}}_${{github.event.inputs.FEIL}}
         path: ./AnyKernel3/*
       continue-on-error: true 
         
     - name: 上传 Image
       uses: actions/upload-artifact@v4
       with:
-        name: Image_${{env.KSU_DIR}}}_${{env.KSUVER}}_${{github.event.inputs.FEIL}}
+        name: Image_KernelSU-Next_${{env.KSUVER}}_${{github.event.inputs.FEIL}}
         path: kernel_workspace/kernel_platform/out/msm-kernel-${{github.event.inputs.CPUD}}-gki/dist/Image
       continue-on-error: true 
